Fixed bug for scrollbar disappearing. Need to be refactored, though.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,11 @@ html, body, #main {
 	height: 100%;
 }
 
+.section {
+	position: absolute;
+	overflow: hidden;
+}
+
 #button {
 	position: absolute;
 	top: 30px;
